# Shape-Blend-Splines

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: theory.md
examples/: basic_demo.py  figure10_nonequal_intervals.py  figure11_selective_interpolation.py  hermite_motion.py
notebooks/: interactive_shape_blend_demo.ipynb
shape_blend_splines/: __init__.py  basis.py  blend.py  curve.py  shapes.py
tests/: test_smoke.py
